--- a/frontend/src/ui/assets/styles/_variables.scss
+++ b/frontend/src/ui/assets/styles/_variables.scss
@@ -1,8 +1,10 @@
 $violet: #573BA3;
+$violet_dark: #2b0f42;
 $purple: #DE2454;
+$purple-dark: #b41b43;
 $gray: #F6F5F7;
 $gray-light: #e1e1e3;
-$purple-dark: #b41b43;
+$gray-lightest: #eae9ed;
 $pink: #FFFFFF;
 $biege: #ffeee6;
 $white: #ffffff;
@@ -11,7 +13,7 @@ $dark: #2c293b;
 
 $max-width: 1024px;
 
-
+$category_header: $violet_dark;
 $dark-text: $dark;
 $hero-text: $biege;
 $light_search_bg: $white;
