--- a/frontend/src/ui/assets/styles/_placeholders.scss
+++ b/frontend/src/ui/assets/styles/_placeholders.scss
@@ -8,6 +8,28 @@
   padding-left: 0.75rem;
 }
 
+%button_primary{
+  padding: 0.5rem 1.5rem;
+  font-family: IbmPlex-Bold, sans-serif;
+  box-sizing: border-box;
+  font-size: 15px;
+  color: $white;
+  background: $button_primary;
+  border-radius: 999999px;
+  box-shadow: 1px 1px 5px 0px rgba(67, 0, 17, 0);
+  text-transform: uppercase;
+  transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+  text-align: center;
+  white-space: nowrap;
+
+  &:hover{
+    background: $button_primary_hover;
+    box-shadow: 1px 7px 13px 0px rgba(67, 0, 17, 0.13);
+    transform: scale(1.02);
+  }
+
+}
+
 
 %app_width {
   width: 100%;
