Admin login page

--- a/frontend/src/ui/assets/styles/_variables.scss
+++ b/frontend/src/ui/assets/styles/_variables.scss
@@ -9,10 +9,22 @@ $pink: #FFFFFF;
 $biege: #ffeee6;
 $white: #ffffff;
 $dark: #2c293b;
+$gray-mid:#F9FAFB;
+$gray-secondary: #E5E7EB;
+$gray-dark-secondary:#24282F;
+$gray-light-secondary: #808C9E;
 
 
 $max-width: 1024px;
-
+$admin-nav-font-color: $violet;
+$admin-nav-font-hover: white;
+$admin-form-label: $gray-light-secondary;
+$admin-form-head: $dark;
+$admin-form-input-outline: $violet;
+$admin-icons: $gray-light-secondary;
+$admin-border: $gray-secondary;
+$admin-bg: $gray-mid;
+$admin-bg-hover: $violet;
 $category_header: $violet_dark;
 $dark-text: $dark;
 $hero-text: $biege;
