--- a/frontend/src/ui/organisms/Home/Home.module.scss
+++ b/frontend/src/ui/organisms/Home/Home.module.scss
@@ -16,9 +16,10 @@
     color: $hero-text;
     text-align: center;
     font-size: 46px;
-    font-family: GT-Bold serif;
+    font-family: GT-Bold, serif;
     line-height: 1.26;
     letter-spacing: -1px;
+    margin-bottom: 4rem;
   }
 
   .search {
