--- a/frontend/src/features/authentification/ui/organisms/AdminLogin/AdminLogin.module.scss
+++ b/frontend/src/features/authentification/ui/organisms/AdminLogin/AdminLogin.module.scss
@@ -1,53 +1,24 @@
 .adminLogin {
-  font-family: "Inter", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  @extend %admin_form_font;
 
   h3 {
-    margin-bottom: 1rem;
-    color: $admin-form-head;
+   @extend %admin_head;
   }
 
   label p {
-    margin-top: 1rem;
-    margin-bottom: 0.5rem;
-    color: $admin-form-label;
+   @extend %admin_input_name;
   }
 
   input {
-    outline-color: $admin-form-input-outline;
-    box-sizing: border-box;
-    padding: 0.375rem 0.75rem;
-    color: #5a6273;
-    border: 1px solid #D7DAE0;
-    border-radius: 3px;
-    background: #fff;
-    font-size: 12px;
-    line-height: 1;
+    @extend %admin_input;
   }
 
   button {
-    margin-top: 20px;
-    outline: none;
-    color: #fff;
-    background-color: $button_primary;
-    //border-color: #3D76F1;
-    border: 1px solid transparent;
-    padding: 0.375rem 3rem;
-    font-size: 0.8rem;
-    line-height: 1.5;
-    border-radius: 3px;
-    transition: all 0.5s;
-    cursor: pointer;
-  }
+    @extend %admin_button;
 
-  button:hover {
-    outline: none;
-    background-color: $button_primary_hover;
   }
   .error, .mainError{
-    color: $admin-form-error;
-    svg{
-      margin-right: 5px;
-    }
+   @extend %admin_error;
   }
 
   .error {
