--- a/frontend/src/ui/assets/styles/_placeholders.scss
+++ b/frontend/src/ui/assets/styles/_placeholders.scss
@@ -8,7 +8,7 @@
   padding-left: 0.75rem;
 }
 
-%button_primary{
+%button_primary {
   padding: 0.5rem 1.5rem;
   font-family: IbmPlex-Bold, sans-serif;
   box-sizing: border-box;
@@ -22,7 +22,7 @@
   text-align: center;
   white-space: nowrap;
 
-  &:hover{
+  &:hover {
     background: $button_primary_hover;
     box-shadow: 1px 7px 13px 0px rgba(67, 0, 17, 0.13);
     transform: scale(1.02);
@@ -36,3 +36,54 @@
   max-width: $max-width;
   margin: auto;
 }
+%admin_form_font{
+  font-family: "Inter", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+}
+%admin_button {
+  margin-top: 20px;
+  outline: none;
+  color: #fff;
+  background-color: $button_primary;
+  //border-color: #3D76F1;
+  border: 1px solid transparent;
+  padding: 0.375rem 3rem;
+  font-size: 0.8rem;
+  line-height: 1.5;
+  border-radius: 3px;
+  transition: all 0.5s;
+  cursor: pointer;
+
+  &:hover {
+    outline: none;
+    background-color: $button_primary_hover;
+  }
+}
+%admin_input{
+  outline-color: $admin-form-input-outline;
+  box-sizing: border-box;
+  padding: 0.375rem 0.75rem;
+  color: #5a6273;
+  border: 1px solid #D7DAE0;
+  border-radius: 3px;
+  background: #fff;
+  font-size: 14px;
+  line-height: 1;
+}
+%admin_input_name{
+  margin-top: 1.15rem;
+  margin-bottom: 0.6rem;
+  color: $admin-form-label;
+}
+
+%admin_head{
+  margin-bottom: 1rem;
+  color: $admin-form-head;
+}
+
+%admin_error{
+  color: $admin-form-error;
+  svg{
+    margin-right: 5px;
+  }
+}
+
