--- a/frontend/src/ui/assets/styles/_fonts.scss
+++ b/frontend/src/ui/assets/styles/_fonts.scss
@@ -14,4 +14,8 @@
   font-family: "IbmPlex-Regular";
   src: url("../fonts/IBMPlexSans-Regular.ttf") format("truetype");
 }
+@font-face {
+  font-family: "IbmPlex-Medium";
+  src: url("../fonts/IBMPlexSans-Medium.ttf") format("truetype");
+}
 
