--- a/frontend/src/ui/assets/styles/_placeholders.scss
+++ b/frontend/src/ui/assets/styles/_placeholders.scss
@@ -9,6 +9,8 @@
 }
 
 %button_primary {
+  border: none;
+  outline: none;
   padding: 0.5rem 1.5rem;
   font-family: IbmPlex-Bold, sans-serif;
   box-sizing: border-box;
@@ -20,10 +22,36 @@
   text-transform: uppercase;
   transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
+  cursor: pointer;
   white-space: nowrap;
 
   &:hover {
     background: $button_primary_hover;
+    box-shadow: 1px 7px 13px 0px rgba(67, 0, 17, 0.13);
+    transform: scale(1.02);
+  }
+
+}
+
+%button_secondary{
+  border:2px $button_secondary solid;
+  outline: none;
+  cursor: pointer;
+  padding: 0.5rem 1.5rem;
+  font-family: IbmPlex-Bold, sans-serif;
+  box-sizing: border-box;
+  font-size: 15px;
+  background-color: #fff;
+  color: $button_secondary;
+  border-radius: 999999px;
+  box-shadow: 1px 1px 5px 0px rgba(67, 0, 17, 0);
+  text-transform: uppercase;
+  transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+  text-align: center;
+  white-space: nowrap;
+
+  &:hover {
+    background: $button_secondary_hover_opacity;
     box-shadow: 1px 7px 13px 0px rgba(67, 0, 17, 0.13);
     transform: scale(1.02);
   }
