CartPage is ready

--- a/frontend/src/ui/assets/styles/_variables.scss
+++ b/frontend/src/ui/assets/styles/_variables.scss
@@ -13,6 +13,7 @@ $white: #ffffff;
 $dark: #2c293b;
 $gray: #808080;
 $gray-mid:#F9FAFB;
+$gray-border: #e1e1e3;
 $gray-secondary: #E5E7EB;
 $gray-dark-secondary:#24282F;
 $gray-light-secondary: #808C9E;
