--- a/frontend/src/ui/assets/styles/_variables.scss
+++ b/frontend/src/ui/assets/styles/_variables.scss
@@ -11,9 +11,11 @@ $pink_lightest: rgba(222,36,84,0.05);
 $biege: #ffeee6;
 $white: #ffffff;
 $dark: #2c293b;
-$gray: #808080;
+$gray_new: #808080;
 $gray-mid:#F9FAFB;
 $gray-border: #e1e1e3;
+$gray-input: #5a6273;
+$gray-input-border: #D7DAE0;
 $gray-secondary: #E5E7EB;
 $gray-dark-secondary:#24282F;
 $gray-light-secondary: #808C9E;
