AccountPage is ready

--- a/frontend/src/features/cart/ui/molecules/OrderSuccess/OrderSuccess.module.scss
+++ b/frontend/src/features/cart/ui/molecules/OrderSuccess/OrderSuccess.module.scss
@@ -1,8 +1,8 @@
 .info{
   padding: 3rem 0.5rem;
   border-radius: 25px;
-  background-color: $pink;
-  border: 5px solid $purple;
+  background-color: $pink-light;
+  border: 5px solid $pink-light;
   max-width:$max-width;
   margin:  10rem auto ;
   text-align: center;
