--- a/frontend/src/features/cart/ui/organisms/Checkout/Checkout.module.scss
+++ b/frontend/src/features/cart/ui/organisms/Checkout/Checkout.module.scss
@@ -21,7 +21,7 @@
     flex-grow: 1;
 
     &_head {
-      color: $purple;
+      color: $pink-light;
       font-family: IbmPlex-Bold, sans-serif;
       font-size: 18px;
       margin-bottom: 0.5rem;
