--- a/frontend/src/ui/assets/styles/_variables.scss
+++ b/frontend/src/ui/assets/styles/_variables.scss
@@ -1,13 +1,13 @@
 $violet: #573BA3;
 $violet_opacity : rgba(222,36,84,0.05);
 $violet_dark: #2b0f42;
-$purple: #DE2454;
-$purple-dark: #b41b43;
+$pink: #DE2454;
+$pink-dark: #b41b43;
 $gray: #F6F5F7;
 $gray-light: #e1e1e3;
 $gray-lightest: #eae9ed;
-$pink: #FFFFFF;
-$pink_lightest: rgba(222,36,84,0.05);
+$pink-light: #FFFFFF;
+$pink_darkest: rgba(222, 36, 84, 0.05);
 $biege: #ffeee6;
 $white: #ffffff;
 $dark: #2c293b;
@@ -35,7 +35,7 @@ $admin-nav-font-hover: $white;
 $admin-form-label: $gray-light-secondary;
 $admin-form-head: $dark;
 $admin-form-input-outline: $violet;
-$admin-form-error: $purple;
+$admin-form-error: $pink-light;
 $admin-form-success :$green;
 $admin-icons: $gray-light-secondary;
 $admin-border: $gray-secondary;
@@ -50,10 +50,10 @@ $hero-text: $biege;
 $light_search_bg: $white;
 $search_bg:$gray-light;
 $border_line: $gray-light;
-$button_primary: $purple;
-$button_primary_hover: $purple-dark;
-$button_primary_bg_disabled: $pink_lightest;
+$button_primary: $pink;
+$button_primary_hover: $pink-dark;
+$button_primary_bg_disabled: $pink_darkest;
 $button_secondary: $violet;
 $button_secondary_hover: $violet_dark;
 $button_secondary_hover_opacity: $violet_opacity;
-$modal_Bg: $pink;
+$modal_Bg: $pink-light;
