--- a/frontend/src/features/cart/ui/atoms/CartCounter/CartCounter.module.scss
+++ b/frontend/src/features/cart/ui/atoms/CartCounter/CartCounter.module.scss
@@ -1,6 +1,6 @@
 .counter{
   position: absolute;
-  background: $purple;
+  background: $pink-light;
   color: $hero-text;
   border-radius: 50%;
   padding:   0 0.4rem;
