--- a/frontend/src/features/cart/ui/atoms/BookInListInfo/BookInListInfo.module.scss
+++ b/frontend/src/features/cart/ui/atoms/BookInListInfo/BookInListInfo.module.scss
@@ -1,7 +1,12 @@
 .bookInfo{
   display: flex;
   align-items: flex-start;
-  a{
+  .price{
+    font-family: IbmPlex-Regular, sans-serif;
+    font-size: 16px;
+    margin-top: 0.3rem;
+  }
+  .picture_link{
     display: block;
     line-height: 0;
     max-width: 155px;
@@ -10,7 +15,7 @@
     margin-right: 1rem;
     position: relative;
   }
-  a:after{
+  .picture_link:after{
     background-image: linear-gradient(90deg, rgba(0,0,0,0.2) 0%, rgba(0,0,0,0.0666667) 4%, rgba(255,255,255,0) 10%, rgba(255,255,255,0) 90%, rgba(0,0,0,0.0666667) 96%, rgba(0,0,0,0.2) 100%);
     position: absolute;
     z-index: 20;
@@ -25,7 +30,7 @@
     width: 100%;
 
   }
-  a:hover{
+  .picture_link:hover{
     box-shadow: 0px 6px 18px rgba(0,0,0,0.3);
     transform: scale(1.1);
   }
@@ -38,7 +43,7 @@
     }
     .author{
       font-family: IbmPlex-Regular, sans-serif;
-      font-size: 15px;
+      font-size: 16px;
     }
   }
 }
