Wishlis delete/add item buttons and full markup

--- a/frontend/src/features/cart/ui/atoms/BookInListInfo/BookInListInfo.module.scss
+++ b/frontend/src/features/cart/ui/atoms/BookInListInfo/BookInListInfo.module.scss
@@ -1,6 +1,7 @@
 .bookInfo{
   display: flex;
   align-items: flex-start;
+  flex-basis: 50%;
   .price{
     font-family: IbmPlex-Regular, sans-serif;
     font-size: 16px;
