--- a/frontend/src/features/books/ui/molecules/Search/Search.module.scss
+++ b/frontend/src/features/books/ui/molecules/Search/Search.module.scss
@@ -5,6 +5,8 @@
   justify-content: space-between;
   padding: 0.5rem 0.5rem 0.5rem 1.5rem;
   border-radius: 999999px;
+  position: relative;
+  z-index: 11;
 
   input {
     border: 0;
@@ -17,6 +19,7 @@
   }
 
   button {
+    z-index: 11;
     cursor: pointer;
     outline: none;
     border: 0;
