--- a/frontend/src/features/user/ui/atoms/UserIcon/UserIcon.module.scss
+++ b/frontend/src/features/user/ui/atoms/UserIcon/UserIcon.module.scss
@@ -32,7 +32,7 @@
       border-bottom: 5px solid $biege;
     }
 
-     a {
+     a, .logout {
       color: $pink !important;
       white-space: nowrap;
       display: block;
@@ -41,7 +41,7 @@
       font-size: 14px;
     }
 
-    a:hover {
+    a:hover, .logout:hover {
       text-decoration: underline;
     }
   }
