--- a/frontend/src/ui/assets/styles/_placeholders.scss
+++ b/frontend/src/ui/assets/styles/_placeholders.scss
@@ -158,4 +158,31 @@
     }
 
 }
+%picture_link{
+  display: block;
+  line-height: 0;
+  max-width: 155px;
+  box-shadow: 0px 6px 12px rgba(0,0,0,0.3);
+  transition: transform 200ms ease-in, box-shadow 200ms ease-in;
+  margin-right: 1rem;
+  position: relative;
+  &:after{
+    background-image: linear-gradient(90deg, rgba(0,0,0,0.2) 0%, rgba(0,0,0,0.0666667) 4%, rgba(255,255,255,0) 10%, rgba(255,255,255,0) 90%, rgba(0,0,0,0.0666667) 96%, rgba(0,0,0,0.2) 100%);
+    position: absolute;
+    z-index: 20;
+    border-radius: 3px;
+    content: '';
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+  }
+  img{
+    width: 100%;
 
+  }
+  &:hover{
+    box-shadow: 0px 6px 18px rgba(0,0,0,0.3);
+    transform: scale(1.1);
+  }
+}
