--- a/frontend/src/features/authentification/ui/organisms/SignUp/SignUp.module.scss
+++ b/frontend/src/features/authentification/ui/organisms/SignUp/SignUp.module.scss
@@ -20,9 +20,9 @@
 .signUp_head {
   font-family: GT-Bold, serif;
   font-size: 46px;
+  margin-top: 2rem;
   margin-bottom: 0.5rem;
   letter-spacing: -1px;
-  margin-bottom: 3rem;
 }
 .form {
   padding: 2.5rem 2rem;
@@ -31,7 +31,7 @@
   border-radius: 0.25rem;
   max-width: 23rem;
   width: 100%;
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
 
   button{
     margin-top: 1rem;
