--- a/frontend/src/ui/assets/styles/_variables.scss
+++ b/frontend/src/ui/assets/styles/_variables.scss
@@ -35,7 +35,7 @@ $admin-nav-font-hover: $white;
 $admin-form-label: $gray-light-secondary;
 $admin-form-head: $dark;
 $admin-form-input-outline: $violet;
-$admin-form-error: $pink-light;
+$admin-form-error: $pink;
 $admin-form-success :$green;
 $admin-icons: $gray-light-secondary;
 $admin-border: $gray-secondary;
